--- a/PythonCognitiveComputerVision.ipynb
+++ b/PythonCognitiveComputerVision.ipynb
@@ -88,8 +88,8 @@
       "cell_type": "code",
       "source": [
         "#필요한 값들을 준비한다.\n",
-        "key = '06b8e851d06744049bd732d3b7660231'\n",
-        "endpoint = 'https://labuser72computervision2.cognitiveservices.azure.com/'+'vision/v3.0/'"
+        "key = ''\n",
+        "endpoint = ''+'vision/v3.0/'"
       ],
       "metadata": {
         "id": "fLclIecIqz2H"
