--- a/PythonCognitiveCustomVision.ipynb
+++ b/PythonCognitiveCustomVision.ipynb
@@ -79,8 +79,8 @@
     {
       "cell_type": "code",
       "source": [
-        "endpoint = 'https://labuser72custom.cognitiveservices.azure.com/'\n",
-        "training_key = '49b60bc825c44a3fbe70ebe2dfc4a545'"
+        "endpoint = ''\n",
+        "training_key = ''"
       ],
       "metadata": {
         "id": "t45QYTgba_ks"
