--- a/PythonCognitiveCustomVision.ipynb
+++ b/PythonCognitiveCustomVision.ipynb
@@ -247,8 +247,8 @@
     {
       "cell_type": "code",
       "source": [
-        "prediction_key ='fefe35bf222f4a768b7f69385fcc3909'\n",
-        "prediction_endpoint = 'https://labuser72custom-prediction.cognitiveservices.azure.com/'\n",
+        "prediction_key =''\n",
+        "prediction_endpoint = ''\n",
         "\n",
         "prediction_credential = ApiKeyCredentials(in_headers={'Prediction-key': prediction_key})\n"
       ],
