Colaboratory를 통해 생성됨

--- a/PythonAzure01.ipynb
+++ b/PythonAzure01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNLKPh4AJWXpEkx4lR1KMyP",
+      "authorship_tag": "ABX9TyO24EmwrR16Z5Tp5lX/+COj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/noeyxos/Python/blob/master/PythonAzure01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/noeyxos/Python/blob/main/PythonAzure01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -79,86 +79,89 @@
         }
       ],
       "source": [
-        "!pip install azure-storage-blob azure-identity  "
+        "!pip install azure-storage-blob azure-identity            # azure blob storage를 다루는 패키지와 identity 인증을 하는 패키지 설치"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "import os, uuid\n",
-        "from azure.identity import DefaultAzureCredential                               #Credential [에버랜드 손목띠]\n",
+        "import os, uuid       \n",
+        "from azure.identity import DefaultAzureCredential                               #Credential [에버랜드 손목띠 - 한번 인증하고 나면 계속 남아있는 거]\n",
         "from azure.storage.blob import BlobServiceClient, BlobClient, ContainerClient"
       ],
       "metadata": {
         "id": "YhzkC4Mal0zn"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Blob Services 에 접속\n",
-        "connect_str = ''\n",
+        "connect_str = ''                                                            # 블롭 스토리지에서 연결 문자열 가져오기\n",
         "blob_service_client = BlobServiceClient.from_connection_string(connect_str)"
       ],
       "metadata": {
         "id": "i0WAN3umm37B"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "container_name = 'test2container'\n",
+        "container_name = 'test2container'             #새로운 컨테이너 만들어보기\n",
         "\n",
         "container_client = blob_service_client.create_container(container_name)"
       ],
       "metadata": {
         "id": "61-RaKD2oYmF"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Create a local directory to hold blob data\n",
-        "local_path = './data'\n",
-        "os.mkdir(local_path)                                                            #os.mkdir(local_path)?\n",
+        "local_path = './data'                 # 현재 경로 밑에 data 폴더 만들기위해 경로 지정\n",
+        "os.mkdir(local_path)                # os 모듈이 mkdir(local_path): local_path 디렉토리를 만드는 메소드 \n",
         "\n",
         "# Create a file in the local data directory to upload and download\n",
-        "local_file_name ='welcome' + '.txt'\n",
-        "upload_file_path = os.path.join(local_path, local_file_name)\n",
+        "# 파일 하나의 이름 \n",
+        "local_file_name ='welcome' + '.txt'    \n",
+        "# 파일 전체의 경로 \n",
+        "upload_file_path = os.path.join(local_path, local_file_name)      #join(): 디렉토리와 파일이름을 합쳐서 하나의 경로로 만들어 줌   \n",
         "\n",
         "\n",
         "#Write text to the file \n",
-        "file = open(upload_file_path, mode='w')                                         #mode='w' 쓰기 모드로 열기 \n",
-        "file.write('Welcome to Python')\n",
+        "file = open(upload_file_path, mode='w')       # mode='w' 쓰기 모드로 열기 \n",
+        "file.write('Welcome to Python')                      # 파일 쓰기\n",
         "file.close()\n"
       ],
       "metadata": {
         "id": "9z3RySPXpGFY"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# blob storage의 정보 가져오기\n",
         "blob_client = blob_service_client.get_blob_client(\n",
         "    container = container_name,\n",
         "    blob = local_file_name\n",
         ")\n",
         "\n",
-        "with open(file = upload_file_path, mode='rb') as data:                          # mode='rb' bin 파일로 연다 (파일이 하나도 안깨지는 장점)      \n",
-        "  blob_client.upload_blob(data)"
+        "with open(file = upload_file_path, mode='rb') as data:                          #'rb' : 읽기전용 binary 파일   \n",
+        "  blob_client.upload_blob(data)                                                              # blob container에 바로 올림 (파일이 하나도 안깨지는 장점)    "
       ],
       "metadata": {
         "id": "ineW-vPBsB2L"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -167,8 +170,8 @@
         "# blob 파일의 리스트를 확인한다. \n",
         "print('\\nListing blobs')\n",
         "\n",
-        "blob_list = container_client.list_blobs()\n",
-        "for blob in blob_list:\n",
+        "blob_list = container_client.list_blobs()       #container_client에 list_blobs를 가져와서 \n",
+        "for blob in blob_list:                                    #blob 을 확인하자\n",
         "  print('\\t'+ blob.name)"
       ],
       "metadata": {
@@ -178,7 +181,7 @@
         },
         "outputId": "18721bf7-fbc1-465d-fb99-999137922df1"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,15 +202,15 @@
         "\n",
         "#blob storage에 업로드\n",
         "download_file_path = os.path.join(local_path, \n",
-        "                                  str.replace(local_file_name,'.txt','_DOWNLOAD.txt'))           #str.replace(타겟, 바꾸기 전, 바뀐 후)\n",
+        "                                  str.replace(local_file_name,'.txt','_DOWNLOAD.txt'))           #str.replace(타겟, 바꾸기 전, 바뀐 후) : local_file_name의 문자열을 바꾸어줌\n",
         "print(download_file_path)\n",
         "\n",
         "#blob_service 야 container를 가져와라 ! \n",
-        "container_client = blob_service_client.get_container_client(container = container_name)\n",
+        "container_client = blob_service_client.get_container_client(container = container_name)    #container의 정보를 가져옴\n",
         "\n",
         "#download\n",
-        "with open(file=download_file_path, mode='wb') as download_file:\n",
-        "  download_file.write(container_client.download_blob(blob.name).readall())"
+        "with open(file=download_file_path, mode='wb') as download_file:                    # download_file로 파일 열고\n",
+        "  download_file.write(container_client.download_blob(blob.name).readall())      # container에서 blob 을 다 읽어와서 다운, 그리고 download_file에 쓰기 "
       ],
       "metadata": {
         "colab": {
@@ -216,7 +219,7 @@
         "id": "blEz5MycPb4M",
         "outputId": "2d994f1c-37f2-48f3-c8cd-46f27e0e06e9"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,17 +242,17 @@
     {
       "cell_type": "code",
       "source": [
-        "# clean Up                                                                      \n",
-        "print('\\nPress the Enter Key to begin clean up')\n",
+        "# clean Up (삭제) : 작업 끝나고 나서 리소스를 정리할 때 사용\n",
+        "print('\\nPress the Enter Key to begin clean up')    # 경고 ! 엔터키를 누르면 다 지워진다! \n",
         "input()\n",
         "\n",
         "print('Deleting blob container...')\n",
         "container_client.delete_container()\n",
         "\n",
         "print('Deleting the local source and downloaded files...')\n",
-        "os.remove(upload_file_path)\n",
+        "os.remove(upload_file_path)                                             \n",
         "os.remove(download_file_path)\n",
-        "os.rmdir(local_path)                                                            #rmdir removedirectory 의 약자\n",
+        "os.rmdir(local_path)                                                            #rmdir : removedirectory \n",
         "\n",
         "print('Done')\n"
       ],
@@ -260,7 +263,7 @@
         "id": "mC-1kcv1SJ0H",
         "outputId": "de4f481f-ab81-4222-ccd9-9095290f440b"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +281,21 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 이번에는 yes를 입력하면  clean Up (삭제) 되는 코드 작성\n",
+        "print('\\n Write \"yes\" to begin clean up')    # 경고 ! 엔터키를 누르면 다 지워진다! \n",
+        "if input() == 'yes' :\n",
+        "\n",
+        "  print('Deleting blob container...')\n",
+        "  container_client.delete_container()\n",
+        "\n",
+        "  print('Deleting the local source and downloaded files...')\n",
+        "  os.remove(upload_file_path)                                             \n",
+        "  os.remove(download_file_path)\n",
+        "  os.rmdir(local_path)                                                            #rmdir : removedirectory \n",
+        "\n",
+        "  print('Done')"
+      ],
       "metadata": {
         "id": "ayYJAnCxV7D_"
       },
