Colaboratory를 통해 생성됨

--- a/PythonAzure02.ipynb
+++ b/PythonAzure02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMC0C2EyvaQUjeRcCmf0W4q",
+      "authorship_tag": "ABX9TyNGwW0UftIIR4smQR/czIEP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/noeyxos/Python/blob/master/PythonAzure02.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/noeyxos/Python/blob/main/PythonAzure02.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -65,19 +65,19 @@
         }
       ],
       "source": [
-        "!pip install azure-storage-file"
+        "!pip install azure-storage-file           # 스토리지에 관련된 파일 패키지 설치"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "from azure.storage.file import FileService\n",
-        "file_service = FileService(account_name='labuser72storage',account_key='')"
+        "from azure.storage.file import FileService        # 파일 쉐어 서비스 가져오기\n",
+        "file_service = FileService(account_name='',account_key='')      # azure에서 만든 파일 서비스와 연결 (스토리지 계정 이름 ,  계정의 엑서스 키)"
       ],
       "metadata": {
         "id": "JIUmMVEl9Ii2"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
     {
       "cell_type": "code",
       "source": [
-        "file_service.create_share('myshare')"
+        "file_service.create_share('myshare')      # 새로운 파일 쉐어 생성"
       ],
       "metadata": {
         "colab": {
@@ -101,7 +101,7 @@
         "id": "I23AXasYAK-_",
         "outputId": "e4094cd8-5b17-497a-a5d5-454964deea3a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -127,7 +127,7 @@
     {
       "cell_type": "code",
       "source": [
-        "file_service.create_directory('myshare','sampledir')"
+        "file_service.create_directory('myshare','sampledir')  # 파일 쉐어에 새로운 디렉토리 생성"
       ],
       "metadata": {
         "colab": {
@@ -136,7 +136,7 @@
         "id": "r9N9KzdDHKDy",
         "outputId": "23fd9fbb-ee86-46e6-8f6f-01197f390d38"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -153,24 +153,24 @@
     {
       "cell_type": "code",
       "source": [
-        "from azure.storage.file import ContentSettings\n",
-        "file_service.create_file_from_path(\n",
-        "    'myshare',\n",
-        "    'sampledir',\n",
-        "    'myfile.jpg',\n",
-        "    'IU.jpg'\n",
+        "from azure.storage.file import ContentSettings      # 에져의 파일 쉐어에 파일 업로드 하기 \n",
+        "file_service.create_file_from_path(                           # 해당 경로를 설정 후 파일 업로드\n",
+        "    'myshare',                                                            # 업로드 할 파일 쉐어 이름\n",
+        "    'sampledir',                                                          # 업로드 할 디렉토리\n",
+        "    'myfile.jpg',                                                          # 업로드 할 파일\n",
+        "    'IU.jpg'                                                                 # 업로드 할 파일\n",
         ")"
       ],
       "metadata": {
         "id": "D8YEgUSSHuIn"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "directory 내용의 확인"
+        "▶ directory 내용의 확인"
       ],
       "metadata": {
         "id": "20OhedfKLMWO"
@@ -179,9 +179,9 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "generator = file_service.list_directories_and_files('myshare')\n",
-        "for file_or_dir in generator:\n",
+        "# directory 내용의 확인\n",
+        "generator = file_service.list_directories_and_files('myshare')    # myshare 안에 있는 디렉토리와 파일 이름 가져오기\n",
+        "for file_or_dir in generator:                                                       # 디렉토리와 파일 모두 출력  \n",
         "  print(file_or_dir.name)"
       ],
       "metadata": {
@@ -191,7 +191,7 @@
         "id": "9fEXBLsSJQHO",
         "outputId": "a935916e-13f0-4612-93fb-e810c5ab3994"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,18 +204,10 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "파일을 가져오는 코드 "
-      ],
-      "metadata": {
-        "id": "r2I__8fYLPgR"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "file_service.get_file_to_path('myshare',None,'myfile','IU_DOWNLOAD.jpg')        #None: 특별한 경로가 없다는 뜻, 'myfile': 다운받을 경로, 'IU_DOWNLOAD.jpg'다운받을 파일"
+        "# 파일을 가져오는 코드\n",
+        "file_service.get_file_to_path('myshare',None,'myfile','IU_DOWNLOAD.jpg')        #None: 특별한 경로가 없다는 뜻, 'myfile', 'IU_DOWNLOAD.jpg' 다운받을 파일 이름"
       ],
       "metadata": {
         "colab": {
@@ -224,7 +216,7 @@
         "id": "nkO0_h1tKxw9",
         "outputId": "101fa0a3-eeb8-4ec1-e745-53e809fed84b"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -241,7 +233,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "snapshot"
+        "▶snapshot"
       ],
       "metadata": {
         "id": "StbYtqS8M4ro"
@@ -250,32 +242,33 @@
     {
       "cell_type": "code",
       "source": [
+        "#snapshot 스냅샷 : 현재 파일 상태를 사진을 찍어놓는 것. (일종의 타임머신기능)\n",
         "metadata = {'foo':'bar'}\n",
         "snapshot = file_service.snapshot_share('myshare', metadata=metadata)"
       ],
       "metadata": {
-        "id": "wx3SowWPL20o"
+        "id": "MsK7zFapP5no"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "share = list(file_service.list_shares(include_snapshots=True))"
+        "share = list(file_service.list_shares(include_snapshots=True))      # 스냅샷에 포함되어 있는 파일 목록 가져오기 "
       ],
       "metadata": {
         "id": "MwbLB5gjNLAd"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "directories_and_file = list(file_service.list_directories_and_files('myshare'))\n",
+        "directories_and_file = list(file_service.list_directories_and_files('myshare'))   # myshare 안에 있는 디렉토리와 파일 이름 가져오기\n",
         "for file_or_dir in directories_and_file:\n",
-        "  print(file_or_dir.name)"
+        "  print(file_or_dir.name)                                         # 출력 (새로 업로드를 해도 업로드 한 파일이 모두 출력된다.) "
       ],
       "metadata": {
         "colab": {
@@ -284,7 +277,7 @@
         "id": "NMN5z7nsRwxM",
         "outputId": "ff221437-c200-444d-9551-9a51daa7d116"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,9 +303,9 @@
     {
       "cell_type": "code",
       "source": [
-        "directories_and_file = list(file_service.list_directories_and_files('myshare',snapshot=''))\n",
+        "directories_and_file = list(file_service.list_directories_and_files('myshare',snapshot=''))  # 스냅샷에 포함된 파일들 가져오기\n",
         "for file_or_dir in directories_and_file:\n",
-        "  print(file_or_dir.name)"
+        "  print(file_or_dir.name)     # 스냅샷 생성시에 있던 파일과 디렉토리들만 출력됨"
       ],
       "metadata": {
         "colab": {
@@ -321,7 +314,7 @@
         "id": "xywsc0e6SR0t",
         "outputId": "036360cd-6b3a-409c-8025-6588f52025d8"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -354,7 +347,7 @@
         "id": "xDVn9B2oTsTq",
         "outputId": "d432be01-a234-4b34-f216-71df6e7714f6"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -380,12 +373,12 @@
     {
       "cell_type": "code",
       "source": [
-        "file_service.delete_file('myshare',None,'myfile')"
+        "file_service.delete_file('myshare',None,'myfile')   #None: 지정할게 없다는 뜻 ,제일 상위 디렉토리가 지정됨."
       ],
       "metadata": {
         "id": "OtaQ4rFrVCIR"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -395,16 +388,6 @@
       ],
       "metadata": {
         "id": "nWbzL9LCVTpq"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "혹시 ! 여기서 오류가 난다면 \n",
-        "아직 스냅샷이 삭제가 되지 않았다는 뜻 ..."
-      ],
-      "metadata": {
-        "id": "uwBI5gGxV4Y-"
       }
     },
     {
@@ -419,7 +402,7 @@
         "id": "yteniZNcVRWI",
         "outputId": "d9698c6a-5057-45f5-e512-1428f938ddf1"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -441,6 +424,16 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "혹시 ! 여기서 오류가 난다면 \n",
+        "아직 스냅샷이 삭제가 되지 않았다는 뜻이다 ..."
+      ],
+      "metadata": {
+        "id": "uwBI5gGxV4Y-"
+      }
     }
   ]
 }
