Colaboratory를 통해 생성됨

--- a/PythonAzure03.ipynb
+++ b/PythonAzure03.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMiVvqt59qY4TAI2Yw8ATKP",
+      "authorship_tag": "ABX9TyP4NZaACvlB74/MK4myNXzb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/noeyxos/Python/blob/master/PythonAzure03.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/noeyxos/Python/blob/main/PythonAzure03.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -65,7 +65,7 @@
         }
       ],
       "source": [
-        "!pip install azure-storage-queue==2.1.0"
+        "!pip install azure-storage-queue==2.1.0     # 큐 패키지 설치"
       ]
     },
     {
@@ -76,7 +76,7 @@
       "metadata": {
         "id": "yBaYJ2HNXN-6"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,12 +91,12 @@
     {
       "cell_type": "code",
       "source": [
-        "connect_str = ''\n",
+        "connect_str = ''      # 연결 문자열 가져오기\n",
         "\n",
-        "queue_name = 'queue-myqueue'\n",
-        "queue_service = QueueService(connection_string= connect_str)\n",
+        "queue_name = 'queue-myqueue'      # 큐 이름 정하기\n",
+        "queue_service = QueueService(connection_string= connect_str)     # 큐 서비스 연결하기\n",
         "\n",
-        "queue_service.create_queue(queue_name)                                          # queue 생성"
+        "queue_service.create_queue(queue_name)     # queue 생성"
       ],
       "metadata": {
         "colab": {
@@ -105,7 +105,7 @@
         "id": "ItnLRsa9XoMo",
         "outputId": "41e5768f-b052-4256-f055-905b526223ad"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -131,13 +131,13 @@
     {
       "cell_type": "code",
       "source": [
-        "queue_service.encode_function = QueueMessageFormat.binary_base64encode\n",
-        "queue_service.decode_function = QueueMessageFormat.binary_base64decode"
+        "queue_service.encode_function = QueueMessageFormat.binary_base64encode      # 큐의  encode 함수 생성\n",
+        "queue_service.decode_function = QueueMessageFormat.binary_base64decode      # 큐의 decode 함수 생성"
       ],
       "metadata": {
         "id": "H6JRTdWDYvax"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -152,12 +152,12 @@
     {
       "cell_type": "code",
       "source": [
-        "import base64\n",
+        "import base64         #메시지를 base64로 엔코딩 하기 위해 가져옴\n",
         "message = 'Hello World'\n",
         "print('Adding message: '+ message)\n",
         "\n",
-        "message = base64.b64encode(message.encode('utf-8'))\n",
-        "queue_service.put_message(queue_name,message)                                   #put_message(넣을 곳, 넣을 내용)"
+        "message = base64.b64encode(message.encode('utf-8'))       #utf-8 방식의 유니코드를 base64로 엔코딩\n",
+        "queue_service.put_message(queue_name,message)              #put_message(넣을 큐 , 넣을 메세지 내용)"
       ],
       "metadata": {
         "colab": {
@@ -166,7 +166,7 @@
         "id": "wcNbXP1dcbJq",
         "outputId": "e5da19e8-f738-4c47-87ab-9d4ef61fed76"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,7 +204,7 @@
         "id": "gPVXQwj7g673",
         "outputId": "bac96a94-cb9f-4fd5-a448-48c08087a381"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,11 +237,11 @@
     {
       "cell_type": "code",
       "source": [
-        "messages = queue_service.peek_messages(queue_name)\n",
+        "messages = queue_service.peek_messages(queue_name)    # 큐의 메시지를 뽑아내는 방식 첫번째 peek\n",
         "\n",
-        "for peeked_message in messages:                                                 #peek = get 과 같은 기능이지만 꺼내오는 것이 아니라 엿보는 것 !! \n",
-        "  message = base64.b64decode(peeked_message.content)\n",
-        "  print('Peeked message : '+message.decode('utf-8'))"
+        "for peeked_message in messages:                                         #peek = get 과 같은 기능이지만 메세지를 아예 꺼내오는 것이 아니라 엿보는 것 !! \n",
+        "  message = base64.b64decode(peeked_message.content)  #peeked_message 내용을 가져오기\n",
+        "  print('Peeked message : '+message.decode('utf-8'))            #Peeked한 메세지 출력(들어간 순서대로)"
       ],
       "metadata": {
         "colab": {
@@ -250,7 +250,7 @@
         "id": "gYJxz8eThTu5",
         "outputId": "31c4b2a7-9419-49c8-d491-74b2beb19951"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,11 +273,11 @@
     {
       "cell_type": "code",
       "source": [
-        "message = queue_service.get_messages(queue_name)\n",
+        "message = queue_service.get_messages(queue_name)         # 큐의 메시지를 뽑아내는 방식 첫번째 get\n",
         "\n",
-        "for msg in messages : \n",
-        "  message = base64.b64decode(msg.content)\n",
-        "  print('Got message: '+ message.decode('utf-8'))"
+        "for msg in messages :                                                             #get은 메시지를 아예 꺼내오는 방식\n",
+        "  message = base64.b64decode(msg.content)                       #get 한 메시지 내용 가져오기\n",
+        "  print('Got message: '+ message.decode('utf-8'))                 # get 한 메시지 출력 (들어간 순서대로)"
       ],
       "metadata": {
         "colab": {
@@ -286,7 +286,7 @@
         "id": "-WWLkuQHiJCd",
         "outputId": "acd68869-d4d5-43aa-e659-041613d62358"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +313,7 @@
         "id": "tuXFYFxujS5o",
         "outputId": "10d9e355-7bfd-4684-bdec-cb9a98689c79"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +345,7 @@
         "id": "sDYWdRcQjWVf",
         "outputId": "282d5a6e-d9cf-4ef8-c91e-621d37604ecb"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
